--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,9 @@ dependencies = [
     "mcp[cli]>=1.6.0",
 ]
 
+[project.scripts]
+mcp-server = "mcp_server:main"
+
 [dependency-groups]
 dev = [
     "ruff<1.0.0,>=0.7.3",
@@ -28,3 +31,10 @@ select = ["E4", "E7", "E9", "F", "I", "ANN"]
 typeCheckingMode = "standard"
 venvPath = "."
 venv = ".venv"
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages= ["src/mcp_server"]
